--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"prettier-plugin-svelte": "^2.1.4",
 		"snowpack": "^3.0.11",
 		"svelte-check": "^1.1.32",
+		"svelte-forms": "^1.1.2",
 		"svelte-jester": "^1.3.0",
 		"svelte-preprocess": "^4.6.6",
 		"tailwindcss": "^2.0.2",
