--- a/build-manifest.json
+++ b/build-manifest.json
@@ -1,31 +1,44 @@
 {
   "inputs": {
     "_snowpack/env.js": {
-      "bytes": 436,
+      "bytes": 414,
       "imports": []
     },
     "dist/components/App/App.svelte.css": {
       "bytes": 819,
       "imports": []
     },
-    "_snowpack/pkg/common/index-ce6d48c2.js": {
-      "bytes": 25684,
+    "_snowpack/pkg/common/index-c3829656.js": {
+      "bytes": 25926,
       "imports": []
     },
     "_snowpack/pkg/svelte/internal.js": {
-      "bytes": 769,
+      "bytes": 791,
       "imports": [
         {
-          "path": "_snowpack/pkg/common/index-ce6d48c2.js",
+          "path": "_snowpack/pkg/common/index-c3829656.js",
+          "kind": "import-statement"
+        }
+      ]
+    },
+    "_snowpack/pkg/common/index-51c9195f.js": {
+      "bytes": 1782,
+      "imports": [
+        {
+          "path": "_snowpack/pkg/common/index-c3829656.js",
           "kind": "import-statement"
         }
       ]
     },
     "_snowpack/pkg/svelte/store.js": {
-      "bytes": 1785,
+      "bytes": 99,
       "imports": [
         {
-          "path": "_snowpack/pkg/common/index-ce6d48c2.js",
+          "path": "_snowpack/pkg/common/index-51c9195f.js",
+          "kind": "import-statement"
+        },
+        {
+          "path": "_snowpack/pkg/common/index-c3829656.js",
           "kind": "import-statement"
         }
       ]
@@ -82,18 +95,95 @@
         }
       ]
     },
+    "dist/pages/Home.svelte.css": {
+      "bytes": 132,
+      "imports": []
+    },
     "_snowpack/pkg/svelte.js": {
       "bytes": 251,
       "imports": [
         {
-          "path": "_snowpack/pkg/common/index-ce6d48c2.js",
+          "path": "_snowpack/pkg/common/index-c3829656.js",
           "kind": "import-statement"
         }
       ]
     },
-    "dist/components/Welcome/Welcome.svelte.css": {
-      "bytes": 85,
+    "_snowpack/pkg/svelte-forms.js": {
+      "bytes": 6764,
+      "imports": [
+        {
+          "path": "_snowpack/pkg/common/index-c3829656.js",
+          "kind": "import-statement"
+        },
+        {
+          "path": "_snowpack/pkg/common/index-51c9195f.js",
+          "kind": "import-statement"
+        }
+      ]
+    },
+    "_snowpack/pkg/axios.js": {
+      "bytes": 46452,
       "imports": []
+    },
+    "dist/config/config.js": {
+      "bytes": 600,
+      "imports": [
+        {
+          "path": "_snowpack/env.js",
+          "kind": "import-statement"
+        }
+      ]
+    },
+    "dist/utils/HttpClient.js": {
+      "bytes": 938,
+      "imports": [
+        {
+          "path": "_snowpack/pkg/axios.js",
+          "kind": "import-statement"
+        },
+        {
+          "path": "dist/config/config.js",
+          "kind": "import-statement"
+        }
+      ]
+    },
+    "dist/api/auth.js": {
+      "bytes": 288,
+      "imports": [
+        {
+          "path": "dist/utils/HttpClient.js",
+          "kind": "import-statement"
+        },
+        {
+          "path": "dist/config/config.js",
+          "kind": "import-statement"
+        }
+      ]
+    },
+    "dist/components/Commons/PICA.svelte.css": {
+      "bytes": 56,
+      "imports": []
+    },
+    "_snowpack/pkg/@popperjs/core.js": {
+      "bytes": 55972,
+      "imports": []
+    },
+    "dist/components/Commons/PICA.svelte.js": {
+      "bytes": 4162,
+      "imports": [
+        {
+          "path": "dist/components/Commons/PICA.svelte.css",
+          "kind": "import-statement"
+        },
+        {
+          "path": "_snowpack/pkg/svelte/internal.js",
+          "kind": "import-statement"
+        },
+        {
+          "path": "_snowpack/pkg/@popperjs/core.js",
+          "kind": "import-statement"
+        }
+      ]
     },
     "dist/components/Typewriter/Typewriter.svelte.css": {
       "bytes": 550,
@@ -252,59 +342,13 @@
         }
       ]
     },
-    "dist/components/Commons/PICA.svelte.css": {
-      "bytes": 56,
-      "imports": []
-    },
-    "_snowpack/pkg/@popperjs/core.js": {
-      "bytes": 55972,
-      "imports": []
-    },
-    "dist/components/Commons/PICA.svelte.js": {
-      "bytes": 4162,
-      "imports": [
-        {
-          "path": "dist/components/Commons/PICA.svelte.css",
-          "kind": "import-statement"
-        },
-        {
-          "path": "_snowpack/pkg/svelte/internal.js",
-          "kind": "import-statement"
-        },
-        {
-          "path": "_snowpack/pkg/@popperjs/core.js",
-          "kind": "import-statement"
-        }
-      ]
-    },
-    "dist/components/Welcome/Welcome.svelte.js": {
-      "bytes": 3667,
-      "imports": [
-        {
-          "path": "dist/components/Welcome/Welcome.svelte.css",
-          "kind": "import-statement"
-        },
-        {
-          "path": "_snowpack/pkg/svelte/internal.js",
-          "kind": "import-statement"
-        },
-        {
-          "path": "dist/stores/index.js",
-          "kind": "import-statement"
-        },
-        {
-          "path": "dist/components/Typewriter/Typewriter.svelte.js",
-          "kind": "import-statement"
-        },
-        {
-          "path": "dist/components/Commons/PICA.svelte.js",
-          "kind": "import-statement"
-        }
-      ]
-    },
     "dist/pages/Home.svelte.js": {
-      "bytes": 1627,
+      "bytes": 7191,
       "imports": [
+        {
+          "path": "dist/pages/Home.svelte.css",
+          "kind": "import-statement"
+        },
         {
           "path": "_snowpack/pkg/svelte/internal.js",
           "kind": "import-statement"
@@ -314,11 +358,23 @@
           "kind": "import-statement"
         },
         {
+          "path": "_snowpack/pkg/svelte-forms.js",
+          "kind": "import-statement"
+        },
+        {
           "path": "dist/stores/index.js",
           "kind": "import-statement"
         },
         {
-          "path": "dist/components/Welcome/Welcome.svelte.js",
+          "path": "dist/api/auth.js",
+          "kind": "import-statement"
+        },
+        {
+          "path": "dist/components/Commons/PICA.svelte.js",
+          "kind": "import-statement"
+        },
+        {
+          "path": "dist/components/Typewriter/Typewriter.svelte.js",
           "kind": "import-statement"
         }
       ]
@@ -369,41 +425,11 @@
         }
       ]
     },
-    "_snowpack/pkg/axios.js": {
-      "bytes": 46452,
-      "imports": []
-    },
-    "dist/config/config.js": {
-      "bytes": 657,
-      "imports": [
-        {
-          "path": "_snowpack/env.js",
-          "kind": "import-statement"
-        }
-      ]
-    },
-    "dist/utils/HttpClient.js": {
-      "bytes": 733,
-      "imports": [
-        {
-          "path": "_snowpack/pkg/axios.js",
-          "kind": "import-statement"
-        },
-        {
-          "path": "dist/config/config.js",
-          "kind": "import-statement"
-        }
-      ]
-    },
     "dist/api/perfumes.js": {
-      "bytes": 685,
+      "bytes": 523,
       "imports": [
         {
           "path": "dist/utils/HttpClient.js",
-          "kind": "import-statement"
-        },
-        {
-          "path": "dist/config/config.js",
           "kind": "import-statement"
         }
       ]
@@ -521,7 +547,7 @@
       "bytes": 313,
       "imports": [
         {
-          "path": "_snowpack/pkg/common/index-ce6d48c2.js",
+          "path": "_snowpack/pkg/common/index-c3829656.js",
           "kind": "import-statement"
         }
       ]
@@ -573,7 +599,7 @@
       ]
     },
     "dist/components/Perfumes/Perfume.svelte.js": {
-      "bytes": 5874,
+      "bytes": 5790,
       "imports": [
         {
           "path": "dist/components/Perfumes/Perfume.svelte.css",
@@ -602,7 +628,7 @@
       ]
     },
     "dist/components/Perfumes/Perfumes.svelte.js": {
-      "bytes": 3146,
+      "bytes": 4526,
       "imports": [
         {
           "path": "dist/components/Perfumes/Perfumes.svelte.css",
@@ -619,7 +645,7 @@
       ]
     },
     "dist/pages/Results.svelte.js": {
-      "bytes": 7491,
+      "bytes": 7487,
       "imports": [
         {
           "path": "_snowpack/pkg/svelte/internal.js",
@@ -719,7 +745,7 @@
       "imports": []
     },
     "dist/components/MailChimp.svelte.js": {
-      "bytes": 2138,
+      "bytes": 3518,
       "imports": [
         {
           "path": "dist/components/MailChimp.svelte.css",
@@ -728,11 +754,15 @@
         {
           "path": "_snowpack/pkg/svelte/internal.js",
           "kind": "import-statement"
+        },
+        {
+          "path": "dist/stores/index.js",
+          "kind": "import-statement"
         }
       ]
     },
     "dist/styles/TailwindStyles.svelte.css": {
-      "bytes": 12181,
+      "bytes": 12307,
       "imports": []
     },
     "dist/styles/TailwindStyles.svelte.js": {
@@ -827,22 +857,25 @@
           "bytesInOutput": 324
         },
         "_snowpack/env.js": {
-          "bytesInOutput": 403
+          "bytesInOutput": 387
         },
         "dist/components/App/App.svelte.css": {
           "bytesInOutput": 0
         },
-        "_snowpack/pkg/common/index-ce6d48c2.js": {
-          "bytesInOutput": 7734
+        "_snowpack/pkg/common/index-c3829656.js": {
+          "bytesInOutput": 7858
         },
         "_snowpack/pkg/svelte/internal.js": {
           "bytesInOutput": 0
         },
-        "_snowpack/pkg/svelte/store.js": {
+        "_snowpack/pkg/common/index-51c9195f.js": {
           "bytesInOutput": 427
         },
+        "_snowpack/pkg/svelte/store.js": {
+          "bytesInOutput": 0
+        },
         "dist/stores/users.js": {
-          "bytesInOutput": 38
+          "bytesInOutput": 39
         },
         "dist/stores/index.js": {
           "bytesInOutput": 0
@@ -856,11 +889,35 @@
         "dist/stores/nav.js": {
           "bytesInOutput": 34
         },
+        "dist/pages/Home.svelte.css": {
+          "bytesInOutput": 0
+        },
         "_snowpack/pkg/svelte.js": {
           "bytesInOutput": 0
         },
-        "dist/components/Welcome/Welcome.svelte.css": {
+        "_snowpack/pkg/svelte-forms.js": {
+          "bytesInOutput": 2812
+        },
+        "_snowpack/pkg/axios.js": {
+          "bytesInOutput": 14931
+        },
+        "dist/config/config.js": {
+          "bytesInOutput": 190
+        },
+        "dist/utils/HttpClient.js": {
+          "bytesInOutput": 459
+        },
+        "dist/api/auth.js": {
+          "bytesInOutput": 116
+        },
+        "dist/components/Commons/PICA.svelte.css": {
           "bytesInOutput": 0
+        },
+        "_snowpack/pkg/@popperjs/core.js": {
+          "bytesInOutput": 18654
+        },
+        "dist/components/Commons/PICA.svelte.js": {
+          "bytesInOutput": 3478
         },
         "dist/components/Typewriter/Typewriter.svelte.css": {
           "bytesInOutput": 0
@@ -898,14 +955,8 @@
         "dist/components/Typewriter/Typewriter.svelte.js": {
           "bytesInOutput": 1588
         },
-        "dist/components/Commons/PICA.svelte.css": {
-          "bytesInOutput": 0
-        },
-        "dist/components/Welcome/Welcome.svelte.js": {
-          "bytesInOutput": 1416
-        },
         "dist/pages/Home.svelte.js": {
-          "bytesInOutput": 387
+          "bytesInOutput": 3011
         },
         "dist/utils/PerfumeCalc/PerfumeCalc.js": {
           "bytesInOutput": 344
@@ -925,17 +976,8 @@
         "dist/utils/index.js": {
           "bytesInOutput": 0
         },
-        "_snowpack/pkg/axios.js": {
-          "bytesInOutput": 14931
-        },
-        "dist/config/config.js": {
-          "bytesInOutput": 204
-        },
-        "dist/utils/HttpClient.js": {
-          "bytesInOutput": 313
-        },
         "dist/api/perfumes.js": {
-          "bytesInOutput": 273
+          "bytesInOutput": 218
         },
         "dist/components/Title/Title.svelte.css": {
           "bytesInOutput": 0
@@ -959,7 +1001,7 @@
           "bytesInOutput": 0
         },
         "dist/components/Image/IntersectionObserver.svelte.js": {
-          "bytesInOutput": 1335
+          "bytesInOutput": 1336
         },
         "dist/components/Commons/Modal/Content.svelte.css": {
           "bytesInOutput": 0
@@ -980,55 +1022,55 @@
           "bytesInOutput": 153
         },
         "dist/components/Commons/Modal/Modal.svelte.js": {
-          "bytesInOutput": 6687
+          "bytesInOutput": 6670
         },
         "dist/components/Image/Image.svelte.css": {
           "bytesInOutput": 0
         },
         "dist/components/Image/Image.svelte.js": {
-          "bytesInOutput": 605
+          "bytesInOutput": 606
         },
         "dist/components/Perfumes/Perfume.svelte.js": {
-          "bytesInOutput": 1796
+          "bytesInOutput": 1728
         },
         "dist/components/Perfumes/Perfumes.svelte.js": {
-          "bytesInOutput": 1179
+          "bytesInOutput": 1561
         },
         "dist/pages/Results.svelte.js": {
-          "bytesInOutput": 2655
+          "bytesInOutput": 2647
         },
         "dist/components/Quiz/Quiz.svelte.css": {
           "bytesInOutput": 0
         },
         "dist/components/Quiz/Quiz.svelte.js": {
-          "bytesInOutput": 1954
+          "bytesInOutput": 1959
         },
         "dist/pages/Quizzes.svelte.js": {
-          "bytesInOutput": 2938
+          "bytesInOutput": 2933
         },
         "dist/components/Image/RoundedImage.svelte.css": {
           "bytesInOutput": 0
         },
         "dist/components/Image/RoundedImage.svelte.js": {
-          "bytesInOutput": 613
+          "bytesInOutput": 614
         },
         "dist/components/MailChimp.svelte.css": {
           "bytesInOutput": 0
         },
         "dist/components/MailChimp.svelte.js": {
-          "bytesInOutput": 1528
+          "bytesInOutput": 1867
         },
         "dist/styles/TailwindStyles.svelte.css": {
           "bytesInOutput": 0
         },
         "dist/components/App/App.svelte.js": {
-          "bytesInOutput": 2873
+          "bytesInOutput": 2874
         },
         "dist/index.js": {
           "bytesInOutput": 139
         }
       },
-      "bytes": 106764
+      "bytes": 133850
     },
     "../~~bundle~~/dist/index.css": {
       "imports": [],
@@ -1042,8 +1084,14 @@
         "dist/components/MailChimp.svelte.css": {
           "bytesInOutput": 42
         },
+        "dist/pages/Home.svelte.css": {
+          "bytesInOutput": 130
+        },
         "dist/styles/TailwindStyles.svelte.css": {
-          "bytesInOutput": 11888
+          "bytesInOutput": 12011
+        },
+        "dist/components/Commons/PICA.svelte.css": {
+          "bytesInOutput": 56
         },
         "dist/components/MBTI/MBTI.svelte.css": {
           "bytesInOutput": 124
@@ -1057,17 +1105,11 @@
         "dist/components/Title/Title.svelte.css": {
           "bytesInOutput": 124
         },
-        "dist/components/Welcome/Welcome.svelte.css": {
-          "bytesInOutput": 84
-        },
-        "dist/components/Commons/PICA.svelte.css": {
-          "bytesInOutput": 56
+        "dist/components/Typewriter/Typewriter.svelte.css": {
+          "bytesInOutput": 548
         },
         "dist/components/Perfumes/Perfume.svelte.css": {
           "bytesInOutput": 56
-        },
-        "dist/components/Typewriter/Typewriter.svelte.css": {
-          "bytesInOutput": 548
         },
         "dist/components/Commons/Modal/Content.svelte.css": {
           "bytesInOutput": 65
@@ -1085,7 +1127,7 @@
           "bytesInOutput": 130
         }
       },
-      "bytes": 15966
+      "bytes": 16135
     }
   }
 }
