--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"build": "snowpack build",
 		"deploy": "gh-pages -d dist",
 		"test": "jest",
-		"lint": "eslint"
+		"lint": "eslint . --ext .ts,.svelte --fix"
 	},
 	"dependencies": {
 		"svelte": "^3.24.0"
@@ -41,11 +41,15 @@
 		"@types/jest": "^26.0.20",
 		"@types/lodash": "^4.14.168",
 		"@types/snowpack-env": "^2.3.3",
+		"@typescript-eslint/eslint-plugin": "^4.15.1",
+		"@typescript-eslint/parser": "^4.15.1",
 		"autoprefixer": "^10.2.4",
 		"axios": "^0.21.1",
 		"chai": "^4.3.0",
 		"enzyme": "^3.11.0",
 		"eslint": "^7.19.0",
+		"eslint-config-prettier": "^8.0.0",
+		"eslint-plugin-prettier": "^3.3.1",
 		"eslint-plugin-svelte3": "^3.0.0",
 		"gh-pages": "^3.1.0",
 		"husky": "^5.0.9",
