--- a/build-manifest.json
+++ b/build-manifest.json
@@ -53,7 +53,7 @@
       ]
     },
     "dist/constants/quizzes.json.proxy.js": {
-      "bytes": 3102,
+      "bytes": 2590,
       "imports": []
     },
     "dist/stores/pagination.js": {
@@ -396,6 +396,10 @@
         }
       ]
     },
+    "dist/pages/Results.svelte.css": {
+      "bytes": 1082,
+      "imports": []
+    },
     "dist/constants/mbtis.json.proxy.js": {
       "bytes": 22418,
       "imports": []
@@ -653,8 +657,12 @@
       ]
     },
     "dist/pages/Results.svelte.js": {
-      "bytes": 7477,
+      "bytes": 7862,
       "imports": [
+        {
+          "path": "dist/pages/Results.svelte.css",
+          "kind": "import-statement"
+        },
         {
           "path": "_snowpack/pkg/svelte/internal.js",
           "kind": "import-statement"
@@ -682,6 +690,10 @@
         {
           "path": "dist/components/Perfumes/RecommendedPerfumes.svelte.js",
           "kind": "import-statement"
+        },
+        {
+          "path": "dist/components/Image/IntersectionObserver.svelte.js",
+          "kind": "import-statement"
         }
       ]
     },
@@ -690,7 +702,7 @@
       "imports": []
     },
     "dist/components/Quiz/Quiz.svelte.js": {
-      "bytes": 5465,
+      "bytes": 5502,
       "imports": [
         {
           "path": "dist/components/Quiz/Quiz.svelte.css",
@@ -861,7 +873,7 @@
       ]
     },
     "dist/styles/TailwindStyles.svelte.css": {
-      "bytes": 13142,
+      "bytes": 13259,
       "imports": []
     },
     "dist/styles/TailwindStyles.svelte.js": {
@@ -878,7 +890,7 @@
       ]
     },
     "dist/components/App/App.svelte.js": {
-      "bytes": 13772,
+      "bytes": 13745,
       "imports": [
         {
           "path": "dist/components/App/App.svelte.css",
@@ -988,7 +1000,7 @@
           "bytesInOutput": 0
         },
         "dist/constants/quizzes.json.proxy.js": {
-          "bytesInOutput": 4704
+          "bytesInOutput": 3706
         },
         "dist/stores/pagination.js": {
           "bytesInOutput": 50
@@ -1068,6 +1080,9 @@
         "dist/pages/Home.svelte.js": {
           "bytesInOutput": 4243
         },
+        "dist/pages/Results.svelte.css": {
+          "bytesInOutput": 0
+        },
         "dist/utils/PerfumeCalc/PerfumeCalc.js": {
           "bytesInOutput": 344
         },
@@ -1144,13 +1159,13 @@
           "bytesInOutput": 1561
         },
         "dist/pages/Results.svelte.js": {
-          "bytesInOutput": 2593
+          "bytesInOutput": 2626
         },
         "dist/components/Quiz/Quiz.svelte.css": {
           "bytesInOutput": 0
         },
         "dist/components/Quiz/Quiz.svelte.js": {
-          "bytesInOutput": 1961
+          "bytesInOutput": 1998
         },
         "dist/pages/Quizzes.svelte.js": {
           "bytesInOutput": 2934
@@ -1186,13 +1201,13 @@
           "bytesInOutput": 0
         },
         "dist/components/App/App.svelte.js": {
-          "bytesInOutput": 4267
+          "bytesInOutput": 4240
         },
         "dist/index.js": {
           "bytesInOutput": 139
         }
       },
-      "bytes": 146133
+      "bytes": 145178
     },
     "../~~bundle~~/dist/index.css": {
       "imports": [],
@@ -1209,11 +1224,14 @@
         "dist/pages/Home.svelte.css": {
           "bytesInOutput": 136
         },
+        "dist/pages/Results.svelte.css": {
+          "bytesInOutput": 1074
+        },
         "dist/pages/Types.svelte.css": {
           "bytesInOutput": 66
         },
         "dist/styles/TailwindStyles.svelte.css": {
-          "bytesInOutput": 12817
+          "bytesInOutput": 12925
         },
         "dist/components/Commons/PICA.svelte.css": {
           "bytesInOutput": 56
@@ -1255,7 +1273,7 @@
           "bytesInOutput": 130
         }
       },
-      "bytes": 17088
+      "bytes": 18270
     }
   }
 }
